resolves buttons off screen; turns bar to blue

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -20,7 +20,19 @@
   text-align: center;
 }
 
-.buttons {
+.container {
+  width: 100%;
+}
+
+
+.laptop-buttons {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  margin: 5px;
+}
+
+.mobile-buttons {
   width: 100%;
   position: fixed;
   bottom: 0;
@@ -33,12 +45,19 @@
 }
 
 .btn-mobile {
-  height: 250px;
-  width: 250px;
-  font-size: 4em;
+  height: 80px;
+  width: 80px;
+  font-size: 1em;
   border-radius: 50%;
 }
 
+.right-mobile {
+  margin-right: 40px;
+}
+
+.right-laptop {
+  margin-right: 80px;
+}
 .error {
   border: 1px solid red;
   border-radius: 5%;
@@ -66,7 +85,7 @@ hr {
 
 .main-nav {
   height: 26px;
-  background:rgba(225,0,0,0.8);
+  background:rgba(0,0,255,0.6);
 }
 
 .app-title {
@@ -97,5 +116,5 @@ hr {
   position: absolute;
   left: -80px;
   top: 25px;
-  background:rgba(225,0,0,0.2);
+  background:rgba(0,0,225,0.2);
 }
